--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ﻿<meta charset="utf-8"><!DOCTYPE html><html lang="pt-br">
 <head><title>SITES INTENO</title>
-<link rel="sortcut icon" href="https://cdn.creazilla.com/cliparts/7814998/shining-star-clipart-lg.png" type="image/gif" />
+<link rel="sortcut icon" href="https://png.pngtree.com/png-vector/20231018/ourmid/pngtree-3d-skull-illustration-png-image_10208203.png" type="image/gif" />
 <link href="JS.js" rel="stylesheet">
 <link rel="stylesheet" href="CSS.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
