Update 1 - Copia.html

--- a/index_arquivos/PASTA 0001/SITES/Site após formatar pc (Tudo)/1 - Copia.html
+++ b/index_arquivos/PASTA 0001/SITES/Site após formatar pc (Tudo)/1 - Copia.html
@@ -253,9 +253,9 @@ Assinatura drive
 </button></a></P>
 <!--##############################################################################-->
 <P><a href="
-LINK🔴
+video 2.html
 " target="_self"><button class="button button3">
-NOME🔴
+video 2
 </button></a></P>
 <!--##############################################################################-->
 <P><a href="
