Update 1 - Copia.html

--- a/index_arquivos/PASTA 0001/SITES/Site após formatar pc (Tudo)/1 - Copia.html
+++ b/index_arquivos/PASTA 0001/SITES/Site após formatar pc (Tudo)/1 - Copia.html
@@ -241,9 +241,9 @@ NOME🔴
 </button></a></P>
 <!--##############################################################################-->
 <P><a href="
-video.html
+LINK🔴
 " target="_self"><button class="button button3">
-video
+NOME🔴
 </button></a></P>
 <!--##############################################################################-->
 <P><a href="
@@ -253,9 +253,9 @@ Assinatura drive
 </button></a></P>
 <!--##############################################################################-->
 <P><a href="
-video 2.html
+LINK🔴
 " target="_self"><button class="button button3">
-video 2
+NOME🔴
 </button></a></P>
 <!--##############################################################################-->
 <P><a href="
