Update 1 - Copia.html

--- a/index_arquivos/PASTA 0001/VÍDEOS/1 - Copia.html
+++ b/index_arquivos/PASTA 0001/VÍDEOS/1 - Copia.html
@@ -220,14 +220,50 @@ document.write('  '+todaysDate);
 <!------------------------------------------------------------------>
 <!--##############################################################################-->
 <li><a href="
+Filmes
+/1 - Copia.html" target="_self"><button class="button button3">
+Filmes
+</button></a></li>
+<!--##############################################################################-->
+<li><a href="
 LINK🔴
-" target="_blank"><button class="button button3">
+/1 - Copia.html" target="_self"><button class="button button3">
 NOME🔴
 </button></a></li>
 <!--##############################################################################-->
 <li><a href="
 LINK🔴
-" target="_blank"><button class="button button3">
+/1 - Copia.html" target="_self"><button class="button button3">
+NOME🔴
+</button></a></li>
+<!--##############################################################################-->
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><button class="button button3">
+NOME🔴
+</button></a></li>
+<!--##############################################################################-->
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><button class="button button3">
+NOME🔴
+</button></a></li>
+<!--##############################################################################-->
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><button class="button button3">
+NOME🔴
+</button></a></li>
+<!--##############################################################################-->
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><button class="button button3">
+NOME🔴
+</button></a></li>
+<!--##############################################################################-->
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><button class="button button3">
 NOME🔴
 </button></a></li>
 <!--##############################################################################-->
@@ -236,6 +272,71 @@ NOME🔴
 
 
 
+
+
+
+
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><button class="button button3">
+NOME🔴
+</button></a></li>
+<!--##############################################################################-->
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><button class="button button3">
+NOME🔴
+</button></a></li>
+<!--##############################################################################-->
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><button class="button button3">
+NOME🔴
+</button></a></li>
+<!--##############################################################################-->
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><button class="button button3">
+NOME🔴
+</button></a></li>
+<!--##############################################################################-->
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><button class="button button3">
+NOME🔴
+</button></a></li>
+<!--##############################################################################-->
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><button class="button button3">
+NOME🔴
+</button></a></li>
+<!--##############################################################################-->
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><button class="button button3">
+NOME🔴
+</button></a></li>
+<!--##############################################################################-->
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><button class="button button3">
+NOME🔴
+</button></a></li>
+<!--##############################################################################-->
+
+
+
+
+
+
+
+
+<!--##############################################################################-->
+<!------------------------------------------------------------------>
+<!------------------------- _blank --- _self ----------------------->
+<!------------------------------------------------------------------>
+<!--##############################################################################-->
 <li><a href="
 LINK🔴
 " target="_blank"><button class="button button3">
