--- a/index_arquivos/PASTA 0001/VÍDEOS/Filmes/1.html
+++ b/index_arquivos/PASTA 0001/VÍDEOS/Filmes/1.html
@@ -73,9 +73,10 @@ div.scrollmenu a:hover {
 }
 </style></head><body><div class="scrollmenu">
 <!--##############################################################################-->
-  <a href="../../../../index.html">MENU</a>
-  <a href="../../index.html">SITES</a>
-  <a href="../1 - Copia.html">VOLTAR</a>
+  <a href="../../../index.html">MENU</a>
+  <a href="../index.html">VOLTAR</a>
+<!--------------------------------------
+  <a href="#contact">Contact</a>
 <!---------------------------------------------------------------------------------->
 
 
@@ -171,66 +172,244 @@ document.write('  '+todaysDate);
 <a href="../../index.html" target="_self">
 <div height="100" style="background-color: blue;line-height: 100px;text-align: center;"><p style="color: white"><FONT SIZE=+4>INÍCIO</FONT></p></div></a>
 <!---------------------------------------------------------------------------------->
+<!--##############################################################################-->
+<!--##############################################################################-->
+<!--##############################################################################-->
+<!DOCTYPE html><html>
+<head><meta name="viewport" content="width=device-width, initial-scale=1"><style>
+* {
+  box-sizing: border-box;
+}
+#myInput {
+  background-image: url('/css/searchicon.png');
+  background-position: 10px 12px;
+  background-repeat: no-repeat;
+  width: 100%;
+  font-size: 16px;
+  padding: 12px 20px 12px 40px;
+  border: 5px solid red;
+  margin-bottom: 12px;
+}
+#myUL {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+#myUL li a {
+  border: 1px solid #ddd;
+  margin-top: -1px; /* Prevent double borders */
+  background-color: #f6f6f6;
+  padding: 5px;
+  text-decoration: none;
+  font-size: 18px;
+  color: blue;
+  display: block
+}
+#myUL li a:hover:not(.header) {
+  background-color: #eee;
+}
+</style></head><body><input type="text" id="myInput" onkeyup="myFunction()" placeholder="Pesquisa nessa página.." title="Type in a name"><ul id="myUL">
+<!--##############################################################################-->
+<!--##############################################################################-->
+<!--##############################################################################-->
+<!--##############################################################################-->
+<!--##############################################################################-->
+<!--##############################################################################-->
 <!------------------------------------------------------------------>
 <!------------------------- _blank --- _self ----------------------->
 <!------------------------------------------------------------------>
-<P><a href="
-LINK🔴
-" target="_blank"><button class="button button3">
-NOME🔴
-</button></a></P>
 <!--##############################################################################-->
-<P><a href="
-LINK🔴
-" target="_blank"><button class="button button3">
-NOME🔴
-</button></a></P>
+<li><a href="
+Filmes
+/1 - Copia.html" target="_self"><button class="button button3">
+Filmes
+</button></a></li>
 <!--##############################################################################-->
-<P><a href="
+<li><a href="
 LINK🔴
-" target="_blank"><button class="button button3">
+/1 - Copia.html" target="_self"><button class="button button3">
 NOME🔴
-</button></a></P>
+</button></a></li>
 <!--##############################################################################-->
-<P><a href="
+<li><a href="
 LINK🔴
-" target="_blank"><button class="button button3">
+/1 - Copia.html" target="_self"><button class="button button3">
 NOME🔴
-</button></a></P>
+</button></a></li>
 <!--##############################################################################-->
-
-
-
-
-
-
-
-<P><a href="
+<li><a href="
 LINK🔴
-" target="_blank"><button class="button button3">
+/1 - Copia.html" target="_self"><button class="button button3">
 NOME🔴
-</button></a></P>
+</button></a></li>
 <!--##############################################################################-->
-<P><a href="
+<li><a href="
 LINK🔴
-" target="_blank"><button class="button button3">
+/1 - Copia.html" target="_self"><button class="button button3">
 NOME🔴
-</button></a></P>
+</button></a></li>
 <!--##############################################################################-->
-<P><a href="
+<li><a href="
 LINK🔴
-" target="_blank"><button class="button button3">
+/1 - Copia.html" target="_self"><button class="button button3">
 NOME🔴
-</button></a></P>
+</button></a></li>
 <!--##############################################################################-->
-<P><a href="
+<li><a href="
 LINK🔴
-" target="_blank"><button class="button button3">
+/1 - Copia.html" target="_self"><button class="button button3">
 NOME🔴
-</button></a></P>
+</button></a></li>
+<!--##############################################################################-->
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><button class="button button3">
+NOME🔴
+</button></a></li>
 <!--##############################################################################-->
 
 
+
+
+
+
+
+
+
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><button class="button button3">
+NOME🔴
+</button></a></li>
+<!--##############################################################################-->
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><button class="button button3">
+NOME🔴
+</button></a></li>
+<!--##############################################################################-->
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><button class="button button3">
+NOME🔴
+</button></a></li>
+<!--##############################################################################-->
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><button class="button button3">
+NOME🔴
+</button></a></li>
+<!--##############################################################################-->
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><button class="button button3">
+NOME🔴
+</button></a></li>
+<!--##############################################################################-->
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><button class="button button3">
+NOME🔴
+</button></a></li>
+<!--##############################################################################-->
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><button class="button button3">
+NOME🔴
+</button></a></li>
+<!--##############################################################################-->
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_self"><button class="button button3">
+NOME🔴
+</button></a></li>
+<!--##############################################################################-->
+
+
+
+
+
+
+
+
+<!--##############################################################################-->
+<!------------------------------------------------------------------>
+<!------------------------- _blank --- _self ----------------------->
+<!------------------------------------------------------------------>
+<!--##############################################################################-->
+<li><a href="
+LINK🔴
+" target="_blank"><button class="button button3">
+NOME🔴
+</button></a></li>
+<!--##############################################################################-->
+<li><a href="
+LINK🔴
+" target="_blank"><button class="button button3">
+NOME🔴
+</button></a></li>
+<!--##############################################################################-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--#############################################################################-->
+<!--#########################################
+<li><a href="#">Christina</a></li>
+<li><a href="#">Cindy</a></li>
+<!--##############################################################################-->
+<!--##############################################################################-->
+<!--##############################################################################-->
+<!--##############################################################################-->
+<!--##############################################################################-->
+<!--##############################################################################-->
+</ul><script>
+function myFunction() {
+    var input, filter, ul, li, a, i, txtValue;
+    input = document.getElementById("myInput");
+    filter = input.value.toUpperCase();
+    ul = document.getElementById("myUL");
+    li = ul.getElementsByTagName("li");
+    for (i = 0; i < li.length; i++) {
+        a = li[i].getElementsByTagName("a")[0];
+        txtValue = a.textContent || a.innerText;
+        if (txtValue.toUpperCase().indexOf(filter) > -1) {
+            li[i].style.display = "";
+        } else {
+            li[i].style.display = "none";
+        }
+    }
+}
+</script></body></html>
+<!--##############################################################################-->
+<!--##############################################################################-->
+<!--##############################################################################-->
 
 
 
