--- a/index_arquivos/PASTA 0001/VÍDEOS/Filmes/Dia Dos Mortos 2 O Contágio ( 2005).html
+++ b/index_arquivos/PASTA 0001/VÍDEOS/Filmes/Dia Dos Mortos 2 O Contágio ( 2005).html
@@ -1,17 +1,56 @@
-﻿<!---------------------------------------------------------------------------------->
-<!---------------------------------------------------------------------------------->
-<!DOCTYPE html><html><body>
-<video width="320" height="240" autoplay muted><source src="
-https://archive.org/download/dia-dos-mortos-2-o-contagio-2005/Dia%20Dos%20Mortos%202%20O%20Cont%C3%A1gio%20%28%202005%29.mp4
-" type="video/mp4"><source src="
-https://archive.org/download/dia-dos-mortos-2-o-contagio-2005/Dia%20Dos%20Mortos%202%20O%20Cont%C3%A1gio%20%28%202005%29.mp4
-" type="video/ogg">Your browser does not support the video tag.</video>
-</body></html>
+﻿<meta charset="utf-8"><!DOCTYPE html><html lang="pt-br">
+<head><title>ON-LINE</title>
+<link rel="sortcut icon" href="https://play-lh.googleusercontent.com/Eg2J_wqPzi774STTViPADmIpLt1RDNnUBJpnQDiIqw7NiNWBnsIB7knRIBJOVXJzbsY" type="image/gif" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="author" content="santos.12164@hotmail.com">
+<meta name="description" content="ON-LINE">
+<meta name="keywords" content="ON-LINE">
+</head><body><style>
+img {
+    max-width: 100%;
+}
+<!----------------------------------------------------------->
+a:link{
+text-decoration:none;
+color:black;
+}
+a:visited{
+text-decoration:none;
+color:red;
+}
+a:hover{
+text-decoration:none;
+color:#01DF01;
+}
+a:active{
+text-decoration:none;
+color:green;
+}
+</style><body bgcolor="#00ff0d"></body><center>
+<!---------------------------------
+<body bgcolor="#000000"></body>
+<FONT COLOR="#ffffff">&emsp;
+?autoplay=1&mute=1&enablejsapi=1
+&emsp;   color:#2EFEF7;
+
+https://stackoverflow.com/questions/16965170/html5-video-autoplay-not-working-correctly
+<!---------------------------------<!---------------------------------------------------------------------------------->
+<video width="440px" loop="true" autoplay="autoplay" controls muted>
+  <source src="https://archive.org/download/dia-dos-mortos-2-o-contagio-2005/Dia%20Dos%20Mortos%202%20O%20Cont%C3%A1gio%20%28%202005%29.mp4" type="video/mp4" />
+  <source src="https://archive.org/download/dia-dos-mortos-2-o-contagio-2005/Dia%20Dos%20Mortos%202%20O%20Cont%C3%A1gio%20%28%202005%29.mp4" type="video/ogv" />
+  <source src="https://archive.org/download/dia-dos-mortos-2-o-contagio-2005/Dia%20Dos%20Mortos%202%20O%20Cont%C3%A1gio%20%28%202005%29.mp4" type="video/webm" />
+</video>
 <!---------------------------------------------------------------------------------->
 <!--------------------------------------
-Dia Dos Mortos 2 O Contágio ( 2005).html
+NOME⚫.html
 --------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
+<!DOCTYPE html><html><head><meta name="viewport" content="width=device-width, initial-scale=1.0"><style>
+video {
+  max-width: 100%;
+  height: auto;
+}
+</style></head><body></center></body></html>
