Update 1 - Copia.html

--- a/index_arquivos/PASTA 0001/VÍDEOS/Filmes/1 - Copia.html
+++ b/index_arquivos/PASTA 0001/VÍDEOS/Filmes/1 - Copia.html
@@ -181,9 +181,9 @@ Dia Dos Mortos 2 O Contágio ( 2005).
 </button></a></P>
 <!--##############################################################################-->
 <P><a href="
-LINK🔴
+A ILHA.html
 " target="_blank"><button class="button button3">
-NOME🔴
+A ILHA.
 </button></a></P>
 <!--##############################################################################-->
 <P><a href="
