--- a/index_arquivos/PASTA 0001/VÍDEOS/Filmes/1.html
+++ b/index_arquivos/PASTA 0001/VÍDEOS/Filmes/1.html
@@ -73,10 +73,9 @@ div.scrollmenu a:hover {
 }
 </style></head><body><div class="scrollmenu">
 <!--##############################################################################-->
-  <a href="../../../index.html">MENU</a>
-  <a href="../index.html">VOLTAR</a>
-<!--------------------------------------
-  <a href="#contact">Contact</a>
+  <a href="../../../../index.html">MENU</a>
+  <a href="../../index.html">SITES</a>
+  <a href="../1 - Copia.html">VOLTAR</a>
 <!---------------------------------------------------------------------------------->
 
 
@@ -221,49 +220,49 @@ document.write('  '+todaysDate);
 <!--##############################################################################-->
 <li><a href="
 Filmes
-/1 - Copia.html" target="_self"><button class="button button3">
+/1 - Copia.html" target="_blank"><button class="button button3">
 Filmes
 </button></a></li>
 <!--##############################################################################-->
 <li><a href="
 LINK🔴
-/1 - Copia.html" target="_self"><button class="button button3">
+/1 - Copia.html" target="_blank"><button class="button button3">
 NOME🔴
 </button></a></li>
 <!--##############################################################################-->
 <li><a href="
-LINK🔴
-/1 - Copia.html" target="_self"><button class="button button3">
-NOME🔴
+Filmes
+/1 - Copia.html" target="_blank"><button class="button button3">
+Filmes
 </button></a></li>
 <!--##############################################################################-->
 <li><a href="
 LINK🔴
-/1 - Copia.html" target="_self"><button class="button button3">
+/1 - Copia.html" target="_blank"><button class="button button3">
 NOME🔴
 </button></a></li>
 <!--##############################################################################-->
 <li><a href="
-LINK🔴
-/1 - Copia.html" target="_self"><button class="button button3">
-NOME🔴
+Filmes
+/1 - Copia.html" target="_blank"><button class="button button3">
+Filmes
 </button></a></li>
 <!--##############################################################################-->
 <li><a href="
 LINK🔴
-/1 - Copia.html" target="_self"><button class="button button3">
+/1 - Copia.html" target="_blank"><button class="button button3">
 NOME🔴
 </button></a></li>
 <!--##############################################################################-->
 <li><a href="
-LINK🔴
-/1 - Copia.html" target="_self"><button class="button button3">
-NOME🔴
+Filmes
+/1 - Copia.html" target="_blank"><button class="button button3">
+Filmes
 </button></a></li>
 <!--##############################################################################-->
 <li><a href="
 LINK🔴
-/1 - Copia.html" target="_self"><button class="button button3">
+/1 - Copia.html" target="_blank"><button class="button button3">
 NOME🔴
 </button></a></li>
 <!--##############################################################################-->
@@ -277,53 +276,110 @@ NOME🔴
 
 
 <li><a href="
-LINK🔴
-/1 - Copia.html" target="_self"><button class="button button3">
-NOME🔴
+Filmes
+/1 - Copia.html" target="_blank"><button class="button button3">
+Filmes
 </button></a></li>
 <!--##############################################################################-->
 <li><a href="
 LINK🔴
-/1 - Copia.html" target="_self"><button class="button button3">
+/1 - Copia.html" target="_blank"><button class="button button3">
 NOME🔴
 </button></a></li>
 <!--##############################################################################-->
 <li><a href="
-LINK🔴
-/1 - Copia.html" target="_self"><button class="button button3">
-NOME🔴
+Filmes
+/1 - Copia.html" target="_blank"><button class="button button3">
+Filmes
 </button></a></li>
 <!--##############################################################################-->
 <li><a href="
 LINK🔴
-/1 - Copia.html" target="_self"><button class="button button3">
+/1 - Copia.html" target="_blank"><button class="button button3">
 NOME🔴
 </button></a></li>
 <!--##############################################################################-->
 <li><a href="
-LINK🔴
-/1 - Copia.html" target="_self"><button class="button button3">
-NOME🔴
+Filmes
+/1 - Copia.html" target="_blank"><button class="button button3">
+Filmes
 </button></a></li>
 <!--##############################################################################-->
 <li><a href="
 LINK🔴
-/1 - Copia.html" target="_self"><button class="button button3">
+/1 - Copia.html" target="_blank"><button class="button button3">
 NOME🔴
 </button></a></li>
 <!--##############################################################################-->
 <li><a href="
-LINK🔴
-/1 - Copia.html" target="_self"><button class="button button3">
-NOME🔴
+Filmes
+/1 - Copia.html" target="_blank"><button class="button button3">
+Filmes
 </button></a></li>
 <!--##############################################################################-->
 <li><a href="
 LINK🔴
-/1 - Copia.html" target="_self"><button class="button button3">
+/1 - Copia.html" target="_blank"><button class="button button3">
 NOME🔴
 </button></a></li>
 <!--##############################################################################-->
+<li><a href="
+Filmes
+/1 - Copia.html" target="_blank"><button class="button button3">
+Filmes
+</button></a></li>
+<!--##############################################################################-->
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_blank"><button class="button button3">
+NOME🔴
+</button></a></li>
+<!--##############################################################################-->
+<li><a href="
+Filmes
+/1 - Copia.html" target="_blank"><button class="button button3">
+Filmes
+</button></a></li>
+<!--##############################################################################-->
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_blank"><button class="button button3">
+NOME🔴
+</button></a></li>
+<!--##############################################################################-->
+<li><a href="
+Filmes
+/1 - Copia.html" target="_blank"><button class="button button3">
+Filmes
+</button></a></li>
+<!--##############################################################################-->
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_blank"><button class="button button3">
+NOME🔴
+</button></a></li>
+<!--##############################################################################-->
+<li><a href="
+Filmes
+/1 - Copia.html" target="_blank"><button class="button button3">
+Filmes
+</button></a></li>
+<!--##############################################################################-->
+<li><a href="
+LINK🔴
+/1 - Copia.html" target="_blank"><button class="button button3">
+NOME🔴
+</button></a></li>
+<!--##############################################################################-->
+
+
+
+
+
+
+
+
+
 
 
 
