Update 1 - Copia.html

--- a/index_arquivos/PASTA 0001/VÍDEOS/Filmes/1 - Copia.html
+++ b/index_arquivos/PASTA 0001/VÍDEOS/Filmes/1 - Copia.html
@@ -219,15 +219,13 @@ document.write('  '+todaysDate);
 <!------------------------------------------------------------------>
 <!--##############################################################################-->
 <li><a href="
-Filmes
-/1 - Copia.html" target="_blank"><button class="button button3">
-Filmes
+Dia Dos Mortos 2 O Contágio ( 2005).html" target="_blank"><button class="button button3">
+Dia Dos Mortos 2 O Contágio ( 2005).
 </button></a></li>
 <!--##############################################################################-->
 <li><a href="
-LINK🔴
-/1 - Copia.html" target="_blank"><button class="button button3">
-NOME🔴
+A ILHA.html" target="_blank"><button class="button button3">
+A ILHA.
 </button></a></li>
 <!--##############################################################################-->
 <li><a href="
