Update 1 - Copia.html

--- a/index_arquivos/PASTA 0001/VÍDEOS/Filmes/1 - Copia.html
+++ b/index_arquivos/PASTA 0001/VÍDEOS/Filmes/1 - Copia.html
@@ -230,7 +230,7 @@ A ILHA.
 <!--##############################################################################-->
 <li><a href="
 Kraken No Céu.html" target="_blank"><button class="button button3">
-Kraken No Céu.
+⭐Kraken No Céu.
 </button></a></li>
 <!--##############################################################################-->
 <li><a href="
